--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "engines": {
     "composer": "^0.20.0"
   },
-  "name": "tutorial-network",
-  "version": "0.0.1",
-  "description": "tutorial-network",
+  "name": "trade-network",
+  "version": "0.1.14",
+  "description": "tn",
   "scripts": {
-    "prepublish": "mkdirp ./dist && composer archive create --sourceType dir --sourceName . -a ./dist/tutorial-network.bna",
+    "prepublish": "mkdirp ./dist && composer archive create --sourceType dir --sourceName . -a ./dist/trade-network.bna",
     "pretest": "npm run lint",
     "lint": "eslint .",
     "test": "nyc mocha -t 0 test/*.js && cucumber-js"
